{
  "version": 4,
  "terraform_version": "1.6.6",
  "serial": 16,
  "lineage": "9aacc17e-f81d-e626-cb1a-bbc75dcd9efd",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "q_backend_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/prj-inframod-pe-training-0124/zones/us-central1-a/instanceGroups/q-umig",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2024-01-29T02:43:45.217-08:00",
            "enable_cdn": false,
            "fingerprint": "Pm6y13cMP9o=",
            "health_checks": [
              "https://www.googleapis.com/compute/v1/projects/prj-inframod-pe-training-0124/global/httpHealthChecks/q-health-check"
            ],
            "id": "projects/prj-inframod-pe-training-0124/global/backendServices/q-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "q-backend-service",
            "port_name": "http",
            "project": "prj-inframod-pe-training-0124",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-inframod-pe-training-0124/global/backendServices/q-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_http_health_check.q_health_check",
            "google_compute_instance.q-terraform-vm",
            "google_compute_instance_group.q_umig",
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet_us_central1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_iap_firewall_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-29T02:35:56.441-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prj-inframod-pe-training-0124/global/firewalls/q-allow-iap-firewall-rule-vaibhav",
            "log_config": [],
            "name": "q-allow-iap-firewall-rule-vaibhav",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-inframod-pe-training-0124/global/networks/q-terraform-network-vaibhav",
            "priority": 1000,
            "project": "prj-inframod-pe-training-0124",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-inframod-pe-training-0124/global/firewalls/q-allow-iap-firewall-rule-vaibhav",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "health_check_firewall_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-01-29T02:35:56.370-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prj-inframod-pe-training-0124/global/firewalls/q-health-check-firewall-rule-vaibhav",
            "log_config": [],
            "name": "q-health-check-firewall-rule-vaibhav",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-inframod-pe-training-0124/global/networks/q-terraform-network-vaibhav",
            "priority": 1000,
            "project": "prj-inframod-pe-training-0124",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-inframod-pe-training-0124/global/firewalls/q-health-check-firewall-rule-vaibhav",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "internal_communication",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2024-01-29T02:35:56.401-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/prj-inframod-pe-training-0124/global/firewalls/q-internal-communication-vaibhav",
            "log_config": [],
            "name": "q-internal-communication-vaibhav",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-inframod-pe-training-0124/global/networks/q-terraform-network-vaibhav",
            "priority": 1000,
            "project": "prj-inframod-pe-training-0124",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-inframod-pe-training-0124/global/firewalls/q-internal-communication-vaibhav",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "q-terraform-vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20240110",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/prj-inframod-pe-training-0124/zones/us-central1-a/disks/q-terraform-instance-vaibhav"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Haswell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/prj-inframod-pe-training-0124/zones/us-central1-a/instances/q-terraform-instance-vaibhav",
            "instance_id": "5723296666704593266",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "D6KF1W4UipU=",
            "metadata_startup_script": "sudo apt-get update; sudo apt-get install -y nginx",
            "name": "q-terraform-instance-vaibhav",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.202.200.142",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/prj-inframod-pe-training-0124/global/networks/q-terraform-network-vaibhav",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/prj-inframod-pe-training-0124/regions/us-central1/subnetworks/q-terraform-subnetwork-vaibhav",
                "subnetwork_project": "prj-inframod-pe-training-0124"
              }
            ],
            "project": "prj-inframod-pe-training-0124",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-inframod-pe-training-0124/zones/us-central1-a/instances/q-terraform-instance-vaibhav",
            "service_account": [
              {
                "email": "86270393698-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server"
            ],
            "tags_fingerprint": "FYLDgkTKlA4=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.subnet_us_central1"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/prj-inframod-pe-training-0124/global/networks/q-terraform-network-vaibhav",
            "mtu": 0,
            "name": "q-terraform-network-vaibhav",
            "project": "prj-inframod-pe-training-0124",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-inframod-pe-training-0124/global/networks/q-terraform-network-vaibhav"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "subnet_us_central1",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-01-29T02:35:57.471-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/prj-inframod-pe-training-0124/regions/us-central1/subnetworks/q-terraform-subnetwork-vaibhav",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "q-terraform-subnetwork-vaibhav",
            "network": "https://www.googleapis.com/compute/v1/projects/prj-inframod-pe-training-0124/global/networks/q-terraform-network-vaibhav",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "prj-inframod-pe-training-0124",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/prj-inframod-pe-training-0124/regions/us-central1/subnetworks/q-terraform-subnetwork-vaibhav",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network"
          ]
        }
      ]
    }
  ]
}